test/libsolidity/syntaxTests/pragma/experimental_unknown_number_literal.sol
pragma experimental 123;
// ----
// SyntaxError 8491: (0-24): Unsupported experimental feature name.
